name:                udp-conduit
version:             0.2.0.0
synopsis:            Simple fire-and-forget conduit UDP wrappers
description:
    `udp-conduit` provides simple wrappers to get fire-and-forget UDP sinks
    and sources.
homepage:            https://github.com/kqr/udp-conduit#readme
license:             ISC
license-file:        LICENSE
author:              kqr
maintainer:          k@rdw.se
copyright:           (c) 2016 kqr,
                         2018 Mihai Giurgeanu
category:            Data, Conduit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Conduit.UDP
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring < 0.11
                     , conduit-combinators >= 1.1 && < 1.2
                     , resourcet
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kqr/udp-conduit
